--- a/app/src/main/res/layout/chat_item.xml
+++ b/app/src/main/res/layout/chat_item.xml
@@ -14,6 +14,7 @@
         android:paddingStart="10dp"
         android:paddingTop="5dp"
         tool:ignore="RtlSymmetry">
+
         <TextView
             android:id="@+id/txtMsgFrom"
             android:layout_width="wrap_content"
@@ -30,8 +31,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="2dp">
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/dateMsgFrom"
@@ -93,8 +93,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="2dp">
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/dateMsgYou"
