--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/listView"
+            android:id="@+id/re"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
