notification icons are changed in notification history

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#90a4ae</color>
-    <color name="colorPrimaryDark">#62757f</color>
-    <color name="colorAccent">#c1d5e0</color>
+    <color name="colorPrimary">#ff3d00</color>
+    <color name="colorPrimaryDark">#c30000</color>
+    <color name="colorAccent">#7c43bd</color>
     <color name="colorSecondary">@android:color/transparent</color>
 </resources>
