--- a/app/src/main/res/layout/sms_recycler_item.xml
+++ b/app/src/main/res/layout/sms_recycler_item.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/sms_relative_layout"
     android:layout_width="match_parent"
+    android:background="?android:attr/selectableItemBackground"
     android:layout_height="50dp">
 
     <android.support.constraint.ConstraintLayout
@@ -57,14 +58,13 @@
             android:id="@+id/body"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="5dp"
             android:ellipsize="end"
             android:gravity="top"
             android:maxLines="1"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/linearLayout"
             app:layout_constraintStart_toStartOf="@+id/guideline6"
             app:layout_constraintTop_toTopOf="@+id/guideline7"
             app:layout_constraintVertical_bias="1.0"
@@ -92,6 +92,7 @@
             app:layout_constraintGuide_percent="0.2" />
 
         <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:orientation="vertical"
