empty text and progress bar is added

--- a/app/src/main/res/layout/fragment_notification_logs.xml
+++ b/app/src/main/res/layout/fragment_notification_logs.xml
@@ -12,5 +12,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical" />
-
+       <ProgressBar
+           android:id="@+id/progress_bar"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_gravity="center"/>
+    <TextView
+        android:id="@+id/empty_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+    android:layout_gravity="center"
+        android:textColor="#000000"
+        android:textStyle="bold"
+        android:text="@string/call_logs_is_empty"/>
 </android.support.design.widget.CoordinatorLayout>
