Notification channel is added in CallDetectService and IncomingSmsService  for Android Oreo and above

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#c30000</color>
     <color name="colorAccent">#7c43bd</color>
     <color name="colorSecondary">@android:color/transparent</color>
+    <color name="mine_shaft">#efc5ca</color>
 </resources>
