--- a/app/src/main/res/layout/activity_pattern_lock.xml
+++ b/app/src/main/res/layout/activity_pattern_lock.xml
@@ -5,6 +5,17 @@
     android:layout_height="match_parent"
     android:background="#000">
 
+    <TextView
+        android:id="@+id/pattern"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/patter_lock_view"
+        android:layout_centerInParent="true"
+        android:text="@string/draw_an_unlock_pattern"
+        android:textColor="#ffffff"
+
+        android:textSize="15sp" />
+
     <com.andrognito.patternlockview.PatternLockView
         android:id="@+id/patter_lock_view"
         android:layout_width="280dp"
@@ -16,4 +27,24 @@
         app:dotAnimationDuration="150"
         app:dotCount="3" />
 
+    <TextView
+        android:id="@+id/clear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="10dp"
+        android:text="@string/clear"
+        android:textSize="15sp"
+        android:textColor="#ffffff" />
+
+    <Button
+        android:id="@+id/next"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:textSize="12sp"
+        android:layout_margin="5dp"
+        android:text="@string/next" />
 </RelativeLayout>
